# invoicy-backend

./: .gitignore  README.md  compose.yml  data.json  data.py  invoices.db  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 3a245782148b_initial_schema.py
scripts/: dev.sh  prod.sh
src/: auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  utils.py
src/invoices/: exceptions.py  models.py  router.py  schemas.py  services.py
src/users/: models.py  router.py  schemas.py  services.py
