[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.3",
    "psycopg>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pynanoid>=0.1.1",
    "sqlalchemy>=2.0.49",
]

[tool.fastapi]
entrypoint = "src.main:app"
